plugins {
	id 'java'
	id 'org.springframework.boot' version '3.2.0-M3'
	id 'io.spring.dependency-management' version '1.1.3'
	id 'com.diffplug.spotless' version '6.22.0'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '21'
}

repositories {
	mavenCentral()
	maven { url 'https://repo.spring.io/milestone' }
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
	// Java 8 date/time type `java.time.LocalDate` not supported by default: add Module
	// "com.fasterxml.jackson.datatype:jackson-datatype-jsr310" to enable handling

	testImplementation 'org.springframework.boot:spring-boot-starter-test'

	compileOnly libs.lombok
	annotationProcessor libs.lombok

	testCompileOnly libs.lombok
	testAnnotationProcessor libs.lombok
}

tasks.named('test') {
	useJUnitPlatform()
}

spotless {
	java {
		targetExclude("build/**/*.java")
		removeUnusedImports()
		googleJavaFormat('1.17.0')
		importOrder('', 'javax', 'java')
	}
}
